plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//CLOUDINARY
	implementation 'com.cloudinary:cloudinary-http44:1.36.0'
	implementation 'com.cloudinary:cloudinary-taglib:1.36.0'
	implementation 'io.github.cdimascio:dotenv-java:2.2.4'


	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.mercadopago:sdk-java:2.1.14'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'

	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//AUTH0
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation("com.auth0:auth0:1.45.0")

	//WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'


}

tasks.named('test') {
	useJUnitPlatform()
}

// Configurar la clase principal para el bootJar
springBoot {
	mainClass = 'com.example.MiPriApi.MiPriApiApplication'
}